Project FullService {
    database_type: 'SQLite'
}

Table accounts {
  id varchar [pk, not null, unique]
  account_key blob [not null]
  entropy blob
  key_derivation_version integer [not null]
  first_block_index bigint [not null]
  next_block_index bigint [not null]
  import_block_index bigint
  name varchar [not null]
  fog_enabled boolean [not null]
  view_only boolean [not null]
}

Table subaddresses {
  public_address_b58 varchar [pk, not null, unique]
  account_id varchar [not null, ref: > accounts.id]
  subaddress_index bigint [not null]
  comment varchar [not null]
  public_spend_key blob [not null]
}

Table transaction_logs {
  id varchar [not null, unique]
  account_id varchar [not null, ref: > accounts.id]
  fee_value bigint [not null]
  fee_token_id bigint [not null]
  submitted_block_index bigint
  tombstone_block_index bigint
  finalized_block_index bigint
  failed boolean [not null]
  comment text [not null]
  tx blob
}

Table transaction_input_txos {
  transaction_log_id varchar [pk, not null, ref: > transaction_logs.id]
  txo_id varchar [pk, not null, ref: > txos.id]
}

Table transaction_output_txos {
  transaction_log_id varchar [pk, not null, ref: > transaction_logs.id]
  txo_id varchar [pk, not null, ref: > txos.id]
  recipient_public_address_b58 varchar [not null]
  is_change boolean [not null]
}

Table txos {
  id varchar [not null, unique]
  account_id varchar [ref: > accounts.id]
  value bigint [not null]
  token_id bigint [not null]
  target_key blob [not null]
  public_key blob [not null]
  e_fog_hint blob [not null]
  txo blob [not null]
  subaddress_index bigint
  key_image blob
  received_block_index bigint
  shared_secret blob
  output_transaction_log_id varchar [ref: > transaction_logs.id]
}